[package]
name = "whoosh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
